[gd_scene load_steps=38 format=3 uid="uid://duc15mrgv1c23"]

[ext_resource type="Script" path="res://enemigo_nube.gd" id="1_8dlsg"]
[ext_resource type="Texture2D" uid="uid://bjmt1ll7rbpm4" path="res://seq/nube_enemigo_seq/nube_x0000.png" id="2_bm6cl"]
[ext_resource type="Texture2D" uid="uid://cyqcfvk7mup3l" path="res://seq/nube_enemigo_seq/nube_x0001.png" id="3_hlhtn"]
[ext_resource type="Texture2D" uid="uid://bh6hgmk2gt7re" path="res://seq/nube_enemigo_seq/nube_x0002.png" id="4_erjg6"]
[ext_resource type="Texture2D" uid="uid://dh5m81e0m7xuy" path="res://seq/nube_enemigo_seq/nube_x0003.png" id="5_6vtt8"]
[ext_resource type="Texture2D" uid="uid://d0mq3wqp3cxoy" path="res://seq/nube_enemigo_seq/nube_x0004.png" id="6_3leej"]
[ext_resource type="Texture2D" uid="uid://c7x6hht38hqj7" path="res://seq/nube_enemigo_seq/nube_x0005.png" id="7_m44p0"]
[ext_resource type="Texture2D" uid="uid://ckeksqmn7x8gd" path="res://seq/nube_enemigo_seq/nube_x0006.png" id="8_7k6d6"]
[ext_resource type="Texture2D" uid="uid://bj1xg8u1877e7" path="res://seq/nube_enemigo_seq/nube_x0007.png" id="9_cyu0d"]
[ext_resource type="Texture2D" uid="uid://b88x3vgrqudga" path="res://seq/nube_enemigo_seq/nube_x0008.png" id="10_te31w"]
[ext_resource type="Texture2D" uid="uid://xlnwkv47qahc" path="res://seq/nube_enemigo_seq/nube_x0009.png" id="11_i4tsc"]
[ext_resource type="Texture2D" uid="uid://cc6d8b4feaqo5" path="res://seq/nube_enemigo_seq/nube_x0010.png" id="12_bncpq"]
[ext_resource type="Texture2D" uid="uid://bqqge8vccv82e" path="res://seq/nube_enemigo_seq/nube_x0011.png" id="13_yqr6t"]
[ext_resource type="Texture2D" uid="uid://dgvu8xkf4hakj" path="res://seq/nube_enemigo_seq/nube_x0012.png" id="14_8w5rt"]
[ext_resource type="Texture2D" uid="uid://cx0pn8fggp10g" path="res://seq/nube_enemigo_seq/nube_x0013.png" id="15_mwihv"]
[ext_resource type="Texture2D" uid="uid://dsruhim8cefgm" path="res://seq/nube_enemigo_seq/nube_x0014.png" id="16_nd6lj"]
[ext_resource type="Texture2D" uid="uid://c4x078i1sri4c" path="res://seq/nube_enemigo_seq/nube_x0015.png" id="17_60lt6"]
[ext_resource type="Texture2D" uid="uid://clpiahdv0vfy8" path="res://seq/nube_enemigo_seq/nube_x0016.png" id="18_ih5ea"]
[ext_resource type="Texture2D" uid="uid://be5imrfpl3t4t" path="res://seq/nube_enemigo_seq/nube_x0017.png" id="19_j07cu"]
[ext_resource type="Texture2D" uid="uid://bl7r80j63cwcw" path="res://seq/nube_enemigo_seq/nube_x0018.png" id="20_h151f"]
[ext_resource type="Texture2D" uid="uid://br1nm5hrudt4e" path="res://seq/nube_enemigo_seq/nube_x0019.png" id="21_algfx"]
[ext_resource type="Texture2D" uid="uid://7cj5pkkk4p48" path="res://seq/nube_enemigo_seq/nube_x0020.png" id="22_ltgjv"]
[ext_resource type="Texture2D" uid="uid://dspml0l4lt3jj" path="res://seq/nube_enemigo_seq/nube_x0021.png" id="23_c1i6x"]
[ext_resource type="Texture2D" uid="uid://k26hi34so0kf" path="res://seq/nube_enemigo_seq/nube_x0022.png" id="24_yuuj4"]
[ext_resource type="Texture2D" uid="uid://cshfnfo6kemn1" path="res://seq/nube_enemigo_seq/nube_x0025.png" id="25_dqpog"]
[ext_resource type="Texture2D" uid="uid://b1nmjve2qpvix" path="res://seq/nube_enemigo_seq/nube_x0026.png" id="26_kumoi"]
[ext_resource type="Texture2D" uid="uid://cxen4783xlons" path="res://seq/nube_enemigo_seq/nube_x0027.png" id="27_ri72u"]
[ext_resource type="Texture2D" uid="uid://dhj256wou53tu" path="res://seq/nube_enemigo_seq/nube_x0028.png" id="28_6atme"]
[ext_resource type="Texture2D" uid="uid://cs2alw5o64qta" path="res://seq/nube_enemigo_seq/nube_x0029.png" id="29_qlkob"]
[ext_resource type="Texture2D" uid="uid://cr3gw6m8vw3r2" path="res://seq/nube_enemigo_seq/nube_x0042.png" id="30_wgra7"]
[ext_resource type="Texture2D" uid="uid://bpyqs6wuyd7l6" path="res://seq/nube_enemigo_seq/nube_x0043.png" id="31_s8t8b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_skw7l"]
radius = 234.002

[sub_resource type="SpriteFrames" id="SpriteFrames_7l5k1"]
animations = [{
"frames": [{
"duration": 0.6,
"texture": ExtResource("2_bm6cl")
}, {
"duration": 1.0,
"texture": ExtResource("3_hlhtn")
}, {
"duration": 1.0,
"texture": ExtResource("4_erjg6")
}, {
"duration": 1.0,
"texture": ExtResource("5_6vtt8")
}, {
"duration": 1.0,
"texture": ExtResource("6_3leej")
}, {
"duration": 1.0,
"texture": ExtResource("7_m44p0")
}, {
"duration": 1.0,
"texture": ExtResource("8_7k6d6")
}, {
"duration": 1.0,
"texture": ExtResource("9_cyu0d")
}, {
"duration": 1.0,
"texture": ExtResource("10_te31w")
}, {
"duration": 1.0,
"texture": ExtResource("11_i4tsc")
}, {
"duration": 1.0,
"texture": ExtResource("12_bncpq")
}, {
"duration": 1.0,
"texture": ExtResource("13_yqr6t")
}, {
"duration": 1.0,
"texture": ExtResource("14_8w5rt")
}, {
"duration": 1.0,
"texture": ExtResource("15_mwihv")
}, {
"duration": 1.0,
"texture": ExtResource("16_nd6lj")
}, {
"duration": 1.0,
"texture": ExtResource("17_60lt6")
}, {
"duration": 1.0,
"texture": ExtResource("18_ih5ea")
}, {
"duration": 1.0,
"texture": ExtResource("19_j07cu")
}, {
"duration": 1.0,
"texture": ExtResource("20_h151f")
}, {
"duration": 1.0,
"texture": ExtResource("21_algfx")
}, {
"duration": 1.0,
"texture": ExtResource("22_ltgjv")
}, {
"duration": 1.0,
"texture": ExtResource("23_c1i6x")
}, {
"duration": 1.0,
"texture": ExtResource("24_yuuj4")
}, {
"duration": 1.0,
"texture": ExtResource("25_dqpog")
}, {
"duration": 1.0,
"texture": ExtResource("26_kumoi")
}, {
"duration": 1.0,
"texture": ExtResource("27_ri72u")
}, {
"duration": 1.0,
"texture": ExtResource("28_6atme")
}, {
"duration": 1.0,
"texture": ExtResource("29_qlkob")
}, {
"duration": 1.0,
"texture": ExtResource("30_wgra7")
}, {
"duration": 1.0,
"texture": ExtResource("31_s8t8b")
}],
"loop": true,
"name": &"default",
"speed": 47.0
}]

[sub_resource type="Animation" id="Animation_xy0iu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemigo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemigo:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemigo:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_m28ec"]
resource_name = "nube_animation"
length = 8.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemigo:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 661.788, -0.25, 0, 0.25, 0, 2501.22, -0.6, -740.883, 0.1, -1583.96, 1153, -0.25, 0, 0.25, 0, 1950, -0.2, -1620.33, 0.2, 372.388, 2271.29, -0.37, 2222.65, 0.43, -1609.5, 2280, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.9, 2.1, 3.2, 4.5, 5.27, 6, 8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemigo:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -411.214, -0.25, 0, 0.21, -1507.31, -947.716, -0.25, 0, 0.25, 0, 362, -0.25, 0, 0.25, 0, -2.45142, -0.7, -1813.89, 0.7, -2094.91, -606, -0.25, 0, 0.25, 0, -79.0944, -0.62, 1558.41, 0.58, -1277.38, 283, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.9, 2.1, 3.2, 3.8, 4.5, 5.22, 6, 8)
}

[sub_resource type="Animation" id="Animation_f61ah"]
resource_name = "vigilia"
length = 4.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 3485.06, -0.25, 0, 0.25, 0, 2982.72, -0.3, 581.134, 0.9, -453.088, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 2.3, 3.2, 4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -226, -0.8, 0, 0.7, -4, 0, -0.25, 0, 0.25, 0, -179.044, -0.8, 57, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 1.4, 2.4, 3.5, 4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sgtb4"]
_data = {
"RESET": SubResource("Animation_xy0iu"),
"nube_animation": SubResource("Animation_m28ec"),
"vigilia": SubResource("Animation_f61ah")
}

[node name="enemigo nube" type="Node2D"]
script = ExtResource("1_8dlsg")

[node name="enemigo" type="Node2D" parent="."]

[node name="area_enemigo" type="Area2D" parent="enemigo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemigo/area_enemigo"]
position = Vector2(0, 29)
shape = SubResource("CircleShape2D_skw7l")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="enemigo/area_enemigo"]
position = Vector2(187, 52)
scale = Vector2(0.601064, 0.537037)
shape = SubResource("CircleShape2D_skw7l")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="enemigo/area_enemigo"]
position = Vector2(-147, 52)
scale = Vector2(0.601064, 0.537037)
shape = SubResource("CircleShape2D_skw7l")

[node name="NubeEnojada" type="AnimatedSprite2D" parent="enemigo"]
position = Vector2(-21, 1)
scale = Vector2(1.38824, 1.38824)
sprite_frames = SubResource("SpriteFrames_7l5k1")
autoplay = "default"
frame_progress = 0.590311

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sgtb4")
}
autoplay = "nube_animation"

[node name="Timer_nube" type="Timer" parent="."]
wait_time = 0.7

[connection signal="body_entered" from="enemigo/area_enemigo" to="." method="_on_area_enemigo_body_entered"]
[connection signal="timeout" from="Timer_nube" to="." method="_on_timer_nube_timeout"]
